tests/miniJava/neg/001490_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new int void 0 ] ; } }
